--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"main": "./src/Index.ts",
 	"license": "MIT",
 	"dependencies": {
+		"@types/mongodb": "^3.6.12",
 		"@types/node": "^15.0.2",
 		"discord.js": "^12.5.3",
 		"dotenv": "^9.0.0",
-		"mongoose": "^5.12.7",
+		"mongodb": "^3.6.6",
 		"nodemon": "^2.0.7",
 		"ts-node-dev": "^1.1.6",
 		"typescript": "^4.2.4"
