--- a/package.json
+++ b/package.json
@@ -4,14 +4,30 @@
 	"main": "./src/Index.ts",
 	"license": "MIT",
 	"dependencies": {
+		"@iamtraction/google-translate": "^1.1.2",
 		"@types/mongodb": "^3.6.12",
 		"@types/node": "^15.0.2",
+		"axios": "^0.21.1",
 		"discord.js": "^12.5.3",
+		"discord.js-pagination": "^1.0.3",
 		"dotenv": "^9.0.0",
+		"emoji-api": "^1.0.2",
+		"erela.js": "^2.3.3",
+		"figlet": "^1.5.0",
+		"fun-responses": "^1.3.2",
+		"iso-639-1": "^2.1.9",
+		"kote-api": "^1.0.2",
+		"moment": "^2.29.1",
 		"mongodb": "^3.6.6",
+		"newsapi": "^2.4.1",
+		"noblox.js": "^4.8.5",
 		"nodemon": "^2.0.7",
+		"pretty-ms": "^7.0.1",
 		"ts-node-dev": "^1.1.6",
-		"typescript": "^4.2.4"
+		"typescript": "^4.2.4",
+		"urban": "^0.3.2",
+		"weather-js": "^2.0.0",
+		"ytsr": "^3.5.0"
 	},
 	"scripts": {
 		"dev": "nodemon ./src/Index.ts"
